# weather-tui-app

./: Cargo.toml  README.md
src/: app.rs  handler.rs  icons.rs  lib.rs  main.rs  ui.rs
src/models/: mod.rs  wether.rs
