[package]
name = "weather-tui"
version = "0.1.0"
authors = ["vijay <vijay.mangapoti@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
log = "0.4.21"
ratatui = "0.26.0"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
simple-logging = "2.0.2"
tokio = { version = "1.35.1", features = ["full"] }
tui-big-text = "0.4.2"
tui-logger = "0.11.0"
