[package]
name = "weather-tui"
version = "0.1.0"
authors = ["vijay <vijay.mangapoti@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.2", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.1", features = ["full"] }
